<resources>
    <string name="app_name">Тролльно</string>
    <string name="app_version">Версия 1.0.0</string>
    <string name="app_info">\u00A9 2016-2021 Тролльно. Все права защищены. Версия приложения 1.0</string>

    <string name="edt_email">example@gmail.com</string>
    <string name="edt_password">Пароль</string>
    <string name="title_login">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="do_not_have_account">Нет аккаунта?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="forgot_message">Для сброса пароля введите почту, указанную при регистрации</string>
    <string name="btn_send">Сбросить пароль</string>
    <string name="edt_name">Логин</string>
    <string name="login_or_email">Логин или Email</string>
    <string name="have_account">Есть аккаунт?</string>
    <string name="terms_and_privacy">Политикой конфиденциалдьности</string>
    <string name="title_terms_and_privacy">Политика конфиденциалдьности</string>
    <string name="terms_text">Создавая учетную запись, вы соглашаетесь с нашими</string>
    <string name="title_profile">Профиль</string>
    <string name="hello">Привет!</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="dark_theme">Темная тема</string>
    <string name="rate_app">Оцените приложение</string>
    <string name="tape">Лента</string>
    <string name="favorites">Избранное</string>
    <string name="fresh_post">Свежее</string>
    <string name="discuss_post">Обсуждают</string>
    <string name="fresh_txt">Свежее</string>
    <string name="search">Поиск</string>
    <string name="source_of_image">Источник:</string>
    <string name="activity">Активность</string>
    <string name="comment_hint">Ваш комментарий...</string>
    <string name="post_without_comment">Комментариев пока нет, Вы можете быть первым</string>
    <string name="change_profile_image">Сменить картинку профиля</string>
    <string name="update">Сохранить изменения</string>
    <string name="comments">Комментарии</string>
    <string name="edit_profile">Изменить профиль</string>
    <string name="login_using_other_account">Или войти с помощью:</string>
    <string name="registration_using_other_account">Зарегистрироваться с помощью:</string>
    <string name="whops">Упс!</string>
    <string name="answers_list_empty">Здесь пока ничего нет</string>
    <string name="favorite_list_empty">Список избранного пуст</string>
    <string name="txt_have_no_favorites">Коллекционируйте тут посты, которые вам понравились.</string>
    <string name="see_all_comment">Весь комментарий</string>
    <string name="answer">Ответить</string>
    <string name="show_comments">Показать ответы на комментарий</string>
    <string name="hide_comments">Скрыть ответы на комментарий</string>
    <string name="mark_all_as_read">Отметить все как прочитанное</string>
    <string name="user_not_authorization">Авторизуйтесь чтобы получить доступ к этому разделу</string>
    <string name="exit">Выйти</string>
    <string name="other_our_apps">Другие наши приложения</string>
    <string name="press_twice_to_exit">Нажмите 2 раза для выхода из приложения</string>
    <string name="nothing_search">По Вашему запросу ничего не найдено</string>
    <string name="enter_data_to_search">Пожалуйста, введите данные для поиска</string>
    <string name="read_the_comment">Читать комментарии</string>
    <string name="write_the_comment">Написать комментарий</string>
    <string name="txt_edit_profile">Редактировать профиль</string>
    <string name="title_autorisation">Авторизация</string>
    <string name="title_registration">Регистрация</string>
    <string name="txt_have_no_comments">Вы еще не добавили ни одного комментария</string>
    <string name="do_you_really_want_to_delete_post_from_favorite">Вы действительно хотите удалить пост из Избранного?</string>
    <string name="refresh_button">Обновить</string>
    <string name="internet_error_from_api">No address associated with hostname</string>
    <string name="internet_error_message">Соединение с интернетом потеряно.</string>
    <string name="txt_comment_sent_succesful">Ваш комментарий опубликован.</string>
    <string name="txt_new_answers">Есть новый ответ</string>
    <string name="txt_change_avatar_image">Аватарка изменена</string>
    <string name="name_is_empty_toast">Поле Имя не должно быть пустым</string>
    <string name="mail_is_empty_toast">Поле email не должно быть пустым</string>
    <string name="password_is_empty_toast">Поле пароль не должно быть пустым</string>
    <string name="uncorrect_email_toast">Некоректный email</string>
    <string name="pasword_length_toast">Поле пароль долджно содержать больше 3 символов</string>
    <string name="password_was_send">"Новый пароль отправлен на почту "</string>
    <string name="do_you_really_want_to_delete_your_account">Вы действительно хотите удалить свой аккаунт?</string>
    <string name="remove_account_confirm_button">Удалить</string>
    <string name="no_button_for_dialog">Нет</string>
    <string name="msg_post_remove_from_favorite">Пост удален из избранного.</string>
    <string name="msg_post_add_to_favorite">Пост добавлен в избранное.</string>
    <string name="msg_account_remove">Ваш аккаунт удален.</string>
    <string name="msg_password_change">Пароль успешно изменен.</string>
    <string name="msg_logout">Вы вышли из аккаунта.</string>
    <string name="msg_login">Приветствуем! Вы вошли в свой аккаунт.</string>
    <string name="msg_wrong_login_or_password">Неправильный логин или пароль.</string>
    <string name="msg_wrong_login_or_password_from_api">Sorry, unrecognized username or password.</string>
    <string name="msg_register_to_existing_email_from_api">\Unprocessable Entity: validation failed.</string>
    <string name="msg_register_to_existing_email">Этот адрес электронной почты или логин уже используется.</string>
    <string name="msg_wrong_email_from_api">This User was not found or invalid</string>
    <string name="msg_wrong_email">Пользователь с таким адресом электронной почты не зарегистрирован.</string>
    <string name="msg_show_all_favorite">Уже показаны все посты, которые добавлены в Избранное</string>
    <string name="msg_user_have_not_any_answer">Ответов больше нет</string>
    <string name="msg_nothing_in_category">В этой категории пока ничего нет</string>
    <string name="msg_have_not_new_post">Новых постов пока нет</string>
    <string name="msg_wait_login_with_facebook">\"Подождите, осуществляется вход через Facebook  \"</string>
    <string name="advertising">РЕКЛАМА</string>
    <string name="txt_switch_get_push_notification">Получать уведомления об ответах на Ваши комментарии</string>
    <string name="txt_switch_mark_read_posts">Отмечать прочитанные посты</string>
    <string name="msg_all_comments_showed">Показаны все комментарии к этому посту</string>
    <string name="comments_with_spinner">Комментарии:</string>
    <string name="authorisation_by_facebook">Вы вошли через Facebook</string>
    <string name="msg_enter_real_name">Веедите имя, которые будут видеть другие пользователи:</string>
    <string name="name">Имя</string>
    <string name="msg_enter_name">Введите имя</string>
    <string name="prev_post">Предыдущий пост</string>
    <string name="next_post">Следующий пост</string>
    <string name="first_post_in_category">Это первый пост в этой категории</string>
    <string name="last_post_in_category">Это последний пост в этой категории</string>
    <string name="msg_no_comments">Комментариев пока нет</string>
    <string name="your_comments_will_be_available_here">Общайтесь и тут будут доступны все ваши комментарии.</string>
    <string name="resource">Ссылка</string>

    <string-array name="sort_comment_value">
        <item>по рейтингу</item>
        <item>по дате</item>
    </string-array>

    // For YouTube
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="resourse_youtube">Источник: youtube.com</string>

    // For ads
    <string name="banner_admob_id">ca-app-pub-3729162410044084~6144363222</string>

    // For FaceBook
    <string name="facebook_app_id">316582089429479</string>
    <string name="fb_login_protocol_scheme">fb316582089429479</string>
</resources>