<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tape_bottom_navigation"
        android:enabled="true"
        android:icon="@drawable/ic_tape_grey"
        android:title="@string/tape"/>

    <item
        android:id="@+id/activity_bottom_navigation"
        android:enabled="true"
        android:icon="@drawable/ic_activity_grey"
        android:title="@string/activity"/>

    <item
        android:id="@+id/favorite_bottom_navigation"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_grey"
        android:title="@string/favorites"/>

    <item
        android:id="@+id/profile_bottom_navigation"
        android:enabled="true"
        android:icon="@drawable/ic_profile_grey"
        android:title="@string/title_profile"/>
</menu>