<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/include_bottom_navigation_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/bg_shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tape_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_tape_grey"
            android:gravity="center"
            android:text="@string/tape" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/activity_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_activity_grey"
                android:gravity="center"
                android:text="@string/activity" />

            <ImageView
                android:id="@+id/indicator_image"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:visibility="gone"
                android:src="@drawable/ic_red_comment_indicator" />

        </RelativeLayout>

        <TextView
            android:id="@+id/favorites_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_favorite_grey"
            android:gravity="center"
            android:text="@string/favorites" />

        <TextView
            android:id="@+id/profile_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_profile_grey"
            android:gravity="center"
            android:text="@string/title_profile" />
    </LinearLayout>

</LinearLayout>