<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_forgot_password"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.apps.trollino.ui.authorisation.ForgotPasswordActivity">

    <ImageButton
        android:id="@+id/back_button_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_arrow_back_green"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_icon_in_rectangle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/GreenHeaderTextStyle"
            android:text="@string/forgot_password"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@android:color/transparent" >

            <EditText
                android:id="@+id/edt_email_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="12dp"
                android:hint="@string/edt_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/forgot_message" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/colorRipple"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <Button
                android:id="@+id/send_button_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/button_background"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/btn_send" />

        </com.balysv.materialripple.MaterialRippleLayout>



    </LinearLayout>


</LinearLayout>