<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.authorisation.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            android:id="@+id/toolbar_login"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/include_appbar_shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/GreenHeaderTextStyle"
            android:text="@string/title_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@android:color/transparent">

            <EditText
                android:id="@+id/edt_name_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="12dp"
                android:hint="@string/edt_name"/>/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edt_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_key"
                android:drawableLeft="@drawable/ic_key"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:hint="@string/edt_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/forgot_password"/>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/colorRipple"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <Button
                android:id="@+id/login_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_background"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/title_login" />

        </com.balysv.materialripple.MaterialRippleLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorLightGrey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/login_using_other_account"/>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/colorRipple"
            android:layout_margin="15dp"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="15dp" />
        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="15dp"
            android:text="@string/do_not_have_account" />

        <TextView
            android:id="@+id/register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="15dp"
            android:layout_marginLeft="15dp"
            android:foreground="?attr/selectableItemBackground"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/register"/>

    </LinearLayout>

</LinearLayout>