<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textSize="16sp"
        android:text="@string/user_not_authorization" />

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="@color/colorRipple"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

        <Button
            android:id="@+id/include_login_button_user_not_authorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/title_login" />

    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="@color/colorRipple"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

        <Button
            android:id="@+id/include_registration_button_user_not_authorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/button_background"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/register" />
    </com.balysv.materialripple.MaterialRippleLayout>

</LinearLayout>