<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.main_group.ActivityInPostActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            android:id="@+id/toolbar_in_post"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/include_appbar_shadow" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_activity_in_post"
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <include
            android:id="@+id/include_user_not_authorization_activity_in_post"
            layout="@layout/include_guest_activity"
            android:visibility="gone" />
    </RelativeLayout>

     <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/bg_shadow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tape_button_activity_in_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_tape_grey"
                android:gravity="center"
                android:text="@string/tape" />

            <TextView
                android:id="@+id/activity_button_activity_in_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_activity_green"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/activity" />

            <TextView
                android:id="@+id/favorites_button_activity_in_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_favorite_grey"
                android:gravity="center"
                android:text="@string/favorites" />

            <TextView
                android:id="@+id/profile_button_activity_in_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_profile_grey"
                android:gravity="center"
                android:text="@string/title_profile" />

        </LinearLayout>
     </LinearLayout>
</LinearLayout>